--- a/kamon-play-2.6.x/src/main/resources/reference.conf
+++ b/kamon-play-2.6.x/src/main/resources/reference.conf
@@ -7,6 +7,10 @@ kamon {
     # Fully qualified name of the implementation of kamon.play.NameGenerator that will be used for assigning operation name
     # to Span.
     name-generator = kamon.play.DefaultNameGenerator
+
+    tag-metrics {
+      attach-http-status = false
+    }
   }
 
   modules {
