--- a/kamon-play-2.5.x/src/main/resources/reference.conf
+++ b/kamon-play-2.5.x/src/main/resources/reference.conf
@@ -8,7 +8,9 @@ kamon {
     # to Span.
     name-generator = kamon.play.DefaultNameGenerator
 
+    # Request elements which will be propagated as metric tags/labels
     tag-metrics {
+      # the `http.status_code` will be added to Span.customMetricTags
       attach-http-status = false
     }
   }
