--- a/kamon-play/src/main/resources/reference.conf
+++ b/kamon-play/src/main/resources/reference.conf
@@ -111,7 +111,9 @@ kamon.instrumentation.play.http {
         # cases it is not possible to define an operation name right at the moment of starting the HTTP server Span
         # and in those cases, this operation name will be initially assigned to the Span. Instrumentation authors
         # should do their best effort to provide a suitable operation name or make use of the "mappings" facilities.
-        #default = "http.server.request"
+        default = "http.server.request"
+
+        name-generator = "kamon.instrumentation.play.DefaultNameGenerator"
 
         # The operation name to be assigned when an application cannot find any route/endpoint/controller to handle
         # a given request. Depending on the instrumented framework, it might be possible to apply this operation
