allow to set custom ws tag generator for play ws request

--- a/kamon-play/src/main/resources/reference.conf
+++ b/kamon-play/src/main/resources/reference.conf
@@ -113,8 +113,6 @@ kamon.instrumentation.play.http {
         # should do their best effort to provide a suitable operation name or make use of the "mappings" facilities.
         #default = "http.server.request"
 
-        name-generator = "kamon.instrumentation.play.DefaultNameGenerator"
-
         # The operation name to be assigned when an application cannot find any route/endpoint/controller to handle
         # a given request. Depending on the instrumented framework, it might be possible to apply this operation
         # name automatically or not, check the frameworks' instrumentation docs for more details.
@@ -141,6 +139,8 @@ kamon.instrumentation.play.http {
         }
       }
     }
+
+    name-generator = "kamon.instrumentation.play.DefaultNameGenerator"
   }
 
   client {
@@ -212,6 +212,8 @@ kamon.instrumentation.play.http {
         #name-generator = "method"
       }
     }
+
+    tags-generator = "kamon.instrumentation.play.DefaultWsTagsGenerator"
   }
 }
 
